# lager

./: .gitignore  .gitmodules  .travis.yml  BUILD  CMakeLists.txt  LICENSE  README.md  README.rst  WORKSPACE  codecov.yml  default.nix  flake.nix  shell.nix  store.hpp
.github/: FUNDING.yml
.github/workflows/: build.yml  test.yml
benchmark/: CMakeLists.txt
benchmark/detail/: traversal.cpp
cmake/: FindSDL2_ttf.cmake  icm_build_failure_testing.cmake
doc/: CMakeLists.txt  Makefile  actions.rst  architecture.rst  conf.py  context.rst  cursor.rst  cursors.rst  debug.rst  deps.rst  doxygen.config  effects.rst  event_loop.rst  index.rst  lens.rst  lenses.rst  model.rst  modularity.rst  reducers.rst  sphinx-html-hack.bash  store.rst  time-travel.rst  util.rst  views.rst
doc/_static/: composition.dia
example/: CMakeLists.txt
example/autopong/: autopong.cpp  autopong.hpp  main.cpp
example/autopong/sdl2/: main.cpp
example/common/: resources.cpp  resources.hpp
example/counter/: counter.hpp  model.hpp  util.hpp
example/counter/ncurses/: CMakeLists.txt  main.cpp  terminal.cpp  terminal.hpp
example/counter/sdl2/: main.cpp
example/counter/std/: CMakeLists.txt  main.cpp
example/snake/: model.cpp  model.hpp
example/snake/qml/: main.cpp  main.qml  qmodel.cpp  qmodel.hpp
example/todo/: app.cpp  app.hpp  item.cpp  item.hpp  model.cpp  model.hpp  todo.cpp  todo.hpp
example/todo/imgui/: main.cpp
example/todo/qml/: main.cpp  main.qml
example/todo/qml-redux/: main.cpp  main.qml
lager/: any_lens.hpp  commit.hpp  config.hpp  config.hpp.in  constant.hpp  context.hpp  cursor.hpp  deps.hpp  effect.hpp  future.hpp  lens.hpp  lenses.hpp  reader.hpp  resources_path.hpp.in  sensor.hpp  setter.hpp  state.hpp  store.hpp  tags.hpp  util.hpp  watch.hpp  with.hpp  writer.hpp  xform.hpp  xformed.hpp
lager/debug/: debugger.hpp  enable.hpp  http_server.hpp  tree_debugger.hpp
lager/debug/cereal/: immer_array.hpp  immer_box.hpp  immer_flex_vector.hpp  immer_vector.hpp  struct.hpp  tuple.hpp  variant_with_name.hpp
lager/detail/: access.hpp  functors.hpp  lens_nodes.hpp  merge_nodes.hpp  no_value.hpp  nodes.hpp  root_signals.hpp  signal.hpp  signals.hpp  smart_lens.hpp  traversal.hpp  traversal_dfs.hpp  traversal_topo.hpp  traversal_topo_intrusive.hpp  traversal_topo_naive_mmap.hpp  watchable.hpp  xform_nodes.hpp  xform_signals.hpp
lager/event_loop/: boost_asio.hpp  lock_free_queue.hpp  manual.hpp  qapplication.hpp  qml.hpp  qt.hpp  queue.hpp  safe_queue.hpp  sdl.hpp
lager/extra/: derive.hpp  enum.hpp  qt.hpp  struct.hpp  thunk.hpp
lager/extra/cereal/: enum.hpp  immer_array.hpp  immer_map.hpp  immer_set.hpp  immer_table.hpp  immer_vector.hpp  inline.hpp  json.hpp  optional_nvp.hpp  struct.hpp  tuple.hpp  variant_with_name.hpp
lager/extra/derive/: cereal.hpp  eq.hpp  hana.hpp  hash.hpp  size_check.hpp
lager/lenses/: at.hpp  at_or.hpp  attr.hpp  optional.hpp  tuple.hpp  unbox.hpp  variant.hpp
nix/: cereal.nix  deps.nix  docs.nix  imgui.nix  lager.nix
reports/: benchmarks.sh
resources/: SourceSansPro-Regular.ttf.license
resources/gui/: gui.elm  gui.js  gui.scss  index.html  makefile
test/: CMakeLists.txt  any_lens.cpp  core.cpp  cursor.cpp  debug.cpp  deps.cpp  errors.cpp  futures.cpp  lenses.cpp  sensor.cpp  setter.cpp  spies.hpp  state.cpp  type_erased_lens.cpp  util.cpp  watchers.cpp  xformed.cpp
test/build_failure/: CMakeLists.txt  cursor-to-cursor.cpp  cursor-to-reader.cpp  lense-to-cursor.cpp  lense-to-reader.cpp  map-to-reader.cpp  reader-to-reader.cpp  setup.hpp  with-to-reader.cpp  xform-to-cursor.cpp  xform-to-reader.cpp
test/cereal/: cerealize.hpp  immer_array.cpp  immer_box.cpp  immer_flex_vector.cpp  immer_table.cpp  immer_vector.cpp  struct.cpp  tuple.cpp  variant_with_name.cpp
test/detail/: nodes.cpp  signals.cpp
test/event_loop/: boost_asio.cpp  lock_free_queue.cpp  loop.hpp  manual.cpp  qml.cpp  qt.cpp  queue.cpp  safe_queue.cpp
test/extra/: derive.cpp  enum.cpp  struct.cpp  thunk.cpp
tools/: lager
tools/gui/: elm-package.json  gui.elm  gui.scss  index.html  makefile
tools/include/: catch.hpp  nonius.h++
tools/travis/: ssh-key  ssh-key.enc  ssh-key.pub
